--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Country Information</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Country Information</h1>
+    <input type="text" id="country-input" placeholder="Enter country name">
+    <button id="submit-btn">Get Country Info</button>
+    <section id="country-info">
+        <h2>Country Info</h2>
+        <p><strong>Capital:</strong> <span id="capital"></span></p>
+        <p><strong>Population:</strong> <span id="population"></span></p>
+        <p><strong>Region:</strong> <span id="region"></span></p>
+        <p><strong>Flag:</strong> <span id="flag"></span></p>
+    </section>
+    <section id="bordering-countries">
+        <h2>Bordering Countries</h2>
+        <ul id="bordering-list"></ul>
+    </section>
 
+    <script src="script.js"></script>
+</body>
+</html>
